<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">5T配件管理系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">配置</string>
    <string name="menu_storagequery">库存查找</string>
    <string name="menu_create">创建</string>
    <string name="advice">设备</string>
    <string name="port">服务端口</string>
    <string name="ip_address">/dev/ttyS4</string>
    <string name="portNumber">115200</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="read">读卡</string>
    <string name="query">查询</string>
    <string name="clear">清除</string>
    <string name="stop">停止读取</string>
    <string name="reading">再次扣动扳机停止读取，正在读取中&#8230;</string>
    <string name="ReadTip">提示：扣动扳机读取</string>
    <string name="connecting">连接中&#8230;</string>
    <string name="readerStatus">状态:</string>
    <string name="softVesion">V1.0.28</string>
    <string name="dataVesion">V1.0.0.3</string>
    <string name="sendFail">发送读取指令失败</string>
    <string name="stopFail">停止读取失败</string>
    <string name="connecSuccess">连接读出器成功</string>
    <string name="connecFail">连接读出器失败</string>
    <string name="help">帮助</string>
    <string name="backPage">返回</string>
    <string name="exit">退出</string>
    
    <string name="dealing">执行中&#8230;</string>
    <string name="storageLocation">库位</string>
    <string name="sqeNo">序号</string>
    <string name="parts">配件</string>
    <string name="num">数量</string>
    <string name="partsCode">配件编码</string>
    <string name="partsSort">配件类型</string>
    <string name="partsName">配件名称</string>
    <string name="stockIn">入库</string>
    <string name="stockOut">出库</string>
    <string name="giveUp">上架</string>
    <string name="sendOut">发料</string>
    <string name="FaultCommit">故障提交</string>
    <string name="SRepair">送修</string>
    <string name="repaircheck">检测</string>
    <string name="stattion">站点</string>
    <string name="backFactory">返厂</string>
    <string name="scrap">报废</string>
    <string name="back">恢复</string>
    <string name="run">启用</string>
    <string name="Stop">停用</string>
    
    <string name="tagQuety">标签查询</string>
    <string name="pairsStockIn">配件入库</string>
    <string name="pairsStockOut">配件出库</string>
    <string name="pairsSendOut">配件发料</string>
    <string name="pairsSendGroup">班组流转</string>
    <string name="pairsCheck">配件盘点</string>
    <string name="pairsRun">配件启用</string>
    <string name="pairsStop">配件停用</string>
    <string name="pairsBack">配件恢复</string>
    <string name="pairsSendRepair">配件送修</string>
    <string name="RepairCheck">维修检测</string>
    <string name="pairsBackFactory">配件返厂</string>
    <string name="pairsScrap">配件报废</string>
    <string name="pairsSendCard">配件发卡</string>
    <string name="pairsFind">配件巡检</string>
    <string name="About">关于软件</string>
    <string name="stattionSendCard">站点发卡</string>
    
    <string name="SysSet">系统配置</string>
    <string name="check">盘点任务</string>
    <string name="runAndStop">启用停用</string>
    <string name="checkCreate">创建盘点任务</string>
    <string name="checkDetail">盘点明细</string>

    <string name="ComfirmStockIn">确认入库勾选此处，然后对准配件扣动扳机键</string>
    <string name="ComfirmStockOut">确认出库勾选此处，然后对准配件扣动扳机键</string>
    <string name="ComfirmSendOut">确认发料勾选此处，然后对准配件扣动扳机键</string>
    <string name="ComfirmBackFactory">确认返厂勾选此处，然后对准配件扣动扳机键</string>
    <string name="ComfirmScrap">确认报废勾选此处，然后对准配件扣动扳机键</string>
    <string name="ComfirmCheck">确认盘点完勾选此处，然后扣动扳机键确认完成盘点</string>
    <string name="ComfirmRun">确认启用勾选此处，然后对准配件扣动扳机键</string>
    <string name="ComfirmStop">确认停用勾选此处，然后对准配件扣动扳机键</string>
    <string name="ComfirmBack">确认恢复勾选此处，然后对准配件扣动扳机键</string>
    <string name="ComfirmSendRepair">确认送修勾选此处，然后对准配件扣动扳机键</string>
    <string name="ComfirmRepair">确认检测勾选此处，然后对准配件扣动扳机键</string>
    
    <string name="pairsStockInTipInfo">1.对准库位扣动扳机读取待入库库位\n2.对准待入库配件扣动扳机读取配件完成入库\n3.将读取到的配件放入库位\n注意：如果已经读到库位，需要读取另外库位入库，此时需要先点击【清除库位】按钮清掉原来的库位</string>
    <string name="pairsStockOutTipInfo">1.根据条件查询需要出库配件\n2.找到配件并对准配件扣动扳机读取完成出库，读取到的配件背景变为黄色识别\n注意：如果查询到非出库配件，点击该配件信息后面删除图标清除</string>
    <string name="pairsSendOutTipInfo">1.对准待发料配件扣动扳机读取\n2.选择领料人信息\n3.确认后勾选上确认框，然后对准待发料配件扣动扳机完成发料\n注意：如果读到非本次发料配件，点击该配件信息后面删除图标清除</string>
    <string name="pairsCheckTipInfo">1.对准待盘点配件扣动扳机读取盘点\n2.盘点到的配件标识为已盘\n3.确认盘点结束，勾选上确认框，然后扣动扳机完成该盘点任务\n注意：如果盘点任务未结束，也可以中途退出盘点界面，下次进入接着盘点</string>
    <string name="pairsRunTipInfo">1.对准站点标签扣动扳机读取\n2.对准待安装在设备的配件扣动扳机读取\n3.测试无误后勾选上确认框，然后对准刚安装的配件扣动扳机完成启用\n注意：如果读到未安装在设备的配件或者该配件安装设备后有故障，点击该配件信息后面删除图标清除</string>
    <string name="pairsStopTipInfo">1.对准待停用配件扣动扳机读取\n2.输入故障现象等信息\n3.确认后勾选上确认框，然后对准待停用配件扣动扳机完成停用</string>
    <string name="pairsFaultTipInfo">1.对准有故障配件扣动扳机读取\n2.输入故障信息等\n3.确认后勾选上确认框，然后对准故障配件扣动扳机完成停用</string>
    <string name="pairsSendRepairTipInfo">1.对准送修配件扣动扳机读取\n2.输入送修人信息\n3.确认后勾选上确认框，然后对准送修配件扣动扳机完成送修\n注意：如果读到其他送修配件，点击该配件信息后面删除图标清除</string>
    <string name="RepairCheckTipInfo">1.对准已经检测配件扣动扳机读取\n2.输入修理检测信息等\n3.确认后勾选上确认框，然后对准检测配件扣动扳机完成修理检测信息提交</string>
    <string name="pairsBackFactoryTipInfo">1.对准待返厂配件扣动扳机读取\n2.确认后勾选上确认框，然后对准待返厂配件扣动扳机完成返厂记录\n注意：如果读到非本次返厂配件，点击该配件信息后面删除图标清除</string>
    <string name="pairsScrapTipInfo">1.对准待报废配件扣动扳机读取\n2.确认后勾选上确认框，然后对准待报废配件扣动扳机完成报废\n注意：如果读到非本次报废配件，点击该配件信息后面删除图标清除</string>
    <string name="pairsBackTipInfo">1.对准待恢复配件扣动扳机读取\n2.确认后勾选上确认框，然后对准待恢复配件扣动扳机完成恢复\n注意：如果读到非本次恢复配件，点击该配件信息后面删除图标清除</string>
    <string name="pairsSendCardTipInfo">
        1.选择状态\n
        2.选择配件类型\n
        3.输入序列号\n
        4.对准欲写入的标签扣动扳机
    </string>
    <string name="pairsStationSendCardTipInfo">
        1.选择要写入的站点\n
        2.对准欲写入的站点标签扣动扳机
    </string>
    <string name="pairsFindTipInfo">
        1.对准站点标签扣动扳机\n
        2.再次扣动扳机扫描该站点已启用的所有配件\n
        3.扫描到的配件都将显示OK字样
    </string>
    <string name="pairsMultiQueryTipInfo">
        1.扣动扳机扫描标签\n
        2.所有扫描到的信息都会显示在屏幕上\n
        3.点击列表项可查看详情\n
        4.点击清空按钮可清除屏幕信息
    </string>

    <string name="checkTip">点击盘点单列表进入盘点操作</string>
    <string name="TakeUser">领料人</string>
    <string name="TakeDept">领料单位</string>
    <string name="FaultType">故障类型</string>
    <string name="FaultDes">故障描述</string>
    <string name="SendDept">送修单位</string>
    <string name="SendUser">送修人</string>
    <string name="LinkTel">联系电话</string>
    <string name="Remark">备注</string>
    <string name="CheckOpition">检测意见</string>
    <string name="CheckUser">检测人</string>
    <string name="CheckGroupUser">检测组长</string>
    <string name="CheckResult">检测结果</string>
    <string name="CheckOpition_BackFactory">返厂</string>
    <string name="CheckOpition_RepairWell">修竣</string>
    <string name="CheckOpition_RepairScrap">报废</string>
    
     <string name="t5">5T</string>
     <string name="factory">厂家</string>
     <string name="Sort">型号</string>
     <string name="hostType">主机</string>
     <string name="Name">名称</string>
     <string name="partsSqe">序列号</string>
    
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="serviceIp">服务地址</string>
    <string name="button_login">登录</string>
    <string name="button_test">测试</string>
    <string name="button_save">保存</string>
    <string name="button_create">创建</string>
    <string name="button_downloadstation">下载站点信息</string>
    <string name="button_downloadcode">下载数据字典</string>
    <string name="button_downloaduser">下载用户信息</string>
    <string name="button_downloadstorageloction">下载库位信息</string>
    <string name="button_downloadcheck">下载盘点任务</string>
    <string name="button_downloadpartsSendrepair">下载故障信息</string>
    <string name="button_downloadstorage">下载库存信息</string>

    <!-- 配件发卡 -->
    <string name="memo_GET_STATION">先读取站点标签</string>
    <string name="memo_GET_STORAGE_LOCATION">先读取库位标签</string>
    <string name="memo_GET_PAIRS">读取配件标签</string>
    <string name="memo_WRT_ERR">写入失败</string>
    <string name="memo_WRT_OK">写入成功</string>

    <!-- 配件巡检 -->
    <string name="memo_FIND_STATION">扣动扳机，扫描站点标签</string>
    <string name="memo_FIND_PAIRS">扣动扳机，扫描配件</string>

</resources>