<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/dealTip"
        android:layout_width="fill_parent"
        android:layout_height="510dp"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/dealing"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/SysSet"
                android:textColor="@color/white"
                android:textSize="20sp" />

             <Button
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="26dp"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="10dp"
                android:background="@color/yellow"
                android:text="@string/backPage" >
            </Button> 
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="465dp"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/serviceIp" />

                    <EditText
                        android:id="@+id/edtServiceIp"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:maxLength="15"
                        android:text="192.168.201.100"
                        android:background="@drawable/editsharp" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port" />

                    <EditText
                        android:id="@+id/edtServiceCom"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:maxLength="4"
                        android:text="8000"
                        android:background="@drawable/editsharp" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btnTest"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnnormal"
                        android:text="@string/button_test" >
                    </Button>

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnnormal"
                        android:text="@string/button_save" >
                    </Button>

                    <Button
                        android:id="@+id/btnDownloadUser"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnnormal"
                        android:text="@string/button_downloaduser" >
                    </Button>

                    <Button
                        android:id="@+id/btnDownloadStation"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnnormal"
                        android:text="@string/button_downloadstation" >
                    </Button>

                    <Button
                        android:id="@+id/btnDownloadCode"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnnormal"
                        android:text="@string/button_downloadcode" >
                    </Button>

                    <Button
                        android:id="@+id/btnDownloadStoragelocation"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnnormal"
                        android:text="@string/button_downloadstorageloction" >
                    </Button>

                    <Button
                        android:id="@+id/btnDownloadCheck"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnnormal"
                        android:text="@string/button_downloadcheck"
                        android:visibility="gone" >
                    </Button>

                    <Button
                        android:id="@+id/btnDownloadSendRepair"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnnormal"
                        android:text="@string/button_downloadpartsSendrepair" >
                    </Button>

                    <Button
                        android:id="@+id/btnDownloadStorage"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnnormal"
                        android:text="@string/button_downloadstorage" >
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</merge>