<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/connect_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/connecting"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:orientation="vertical" >

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/chinacartred"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:text="@string/RepairCheck"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:textColor="@color/white"
                android:background="@color/chinacartred"
                android:text="@string/help" >
            </Button>

           <Button
               android:id="@+id/btnBack"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="10dp"
               android:background="@drawable/backbtn"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="465dp"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


               <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp" >

                    <TextView
                        android:id="@+id/txtTagInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutRepair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/FaultType" />

                        <LinearLayout
                            android:id="@+id/FaultType_CheckBoxList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/FaultDes" />

                        <EditText
                            android:id="@+id/edtFaultDes"
                            android:layout_width="160dp"
                            android:layout_height="80dp"
                            android:gravity="top"
                            android:background="@drawable/editsharp" >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Remark" />

                        <EditText
                            android:id="@+id/edtRemark"
                            android:layout_width="160dp"
                            android:layout_height="80dp"
                            android:gravity="top"
                            android:background="@drawable/editsharp" >
                        </EditText>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llayoutCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CheckOpition" />

                        <RadioGroup
                            android:id="@+id/radioGroupCheckOpition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/rbtRepairWell"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/CheckOpition_RepairWell" />

                            <RadioButton
                                android:id="@+id/rbtBackFactory"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/CheckOpition_BackFactory" />

                            <RadioButton
                                android:id="@+id/rbtScrap"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/CheckOpition_RepairScrap" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CheckResult" />

                        <EditText
                            android:id="@+id/edtCheckResult"
                            android:layout_width="160dp"
                            android:layout_height="80dp"
                            android:gravity="top"
                            android:background="@drawable/editsharp" >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:visibility="gone"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CheckGroupUser" />

                        <EditText
                            android:id="@+id/edtCheckGroupUser"
                            android:layout_width="160dp"
                            android:layout_height="40dp"
                            android:background="@drawable/editsharp" >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/cbxComfirmRepair"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ComfirmRepair" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/ReadTip"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</merge>