<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/connect_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/connecting"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pairsSendRepair"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="26dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="10dp"
                android:background="@color/yellow"
                android:text="@string/backPage" >
            </Button>
            <Button
                android:id="@+id/btnConfig"
                android:layout_width="50dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/yellow"
                android:text="@string/help" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="465dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/listviewbg"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/lstPartsSendRepairView"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_margin="1dp"
                    android:listSelector="@drawable/list_item_shape" >
                </ListView>

                <TextView
                    android:id="@+id/txtInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SendUser" />

                <EditText
                    android:id="@+id/edtSendUser"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:background="@drawable/editsharp"
                    android:maxLength="10" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LinkTel" />

                <EditText
                    android:id="@+id/edtLinkTel"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:background="@drawable/editsharp"
                    android:maxLength="20" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/cbxComfirmSendRepair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ComfirmSendRepair" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/ReadTip"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</merge>